# hack

./: .gitignore  Dockerfile  Dockerfile.uv  README.md  agent.py  agents.md  docker-compose.yml  download_model.py  pyproject.toml  requirements.txt
input/: tasks.json
tests/: test_agent.py
