[project]
name = "agent-system"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "textblob>=0.18",
    "spacy>=3.7",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
